<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/calcSection"
        android:checkableBehavior="single">
        <item
            android:id="@+id/calcFragment"
            android:icon="@drawable/ic_calc"
            android:title="@string/basic_calculator" />


    <item android:title="@string/conversions">
        <menu>
            <item
                android:id="@+id/nav_length"
                android:icon="@drawable/ic_length"
                android:title="@string/menu_length" />
            <item
                android:id="@+id/nav_weight"
                android:icon="@drawable/ic_weight"
                android:title="@string/menu_weight" />
            <item
                android:id="@+id/nav_time"
                android:icon="@drawable/ic_time"
                android:title="@string/menu_time" />
            <item
                android:id="@+id/nav_speed"
                android:icon="@drawable/ic_speed"
                android:title="@string/menu_speed" />
            <item
                android:id="@+id/nav_area"
                android:icon="@drawable/ic_area"
                android:title="@string/menu_area" />
            <item
                android:id="@+id/nav_dataSize"
                android:icon="@drawable/ic_data"
                android:title="@string/menu_dataSize" />
            <item
                android:id="@+id/nav_energy"
                android:icon="@drawable/ic_power"
                android:title="@string/menu_energy" />
            <item
                android:id="@+id/nav_pressure"
                android:icon="@drawable/ic_pressure"
                android:title="@string/menu_pressure" />
            <item
                android:id="@+id/nav_temperature"
                android:icon="@drawable/ic_temperature"
                android:title="@string/menu_temperature" />
        </menu>
    </item>
    </group>

</menu>