<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.dataSize.DataSizeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999">

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputDataSize"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="0.2"
                android:autofillHints="@string/enter_value"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_value"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/dataSizeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>


        <TextView
            android:id="@+id/to"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/to"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/keyboardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36">

            <TextView
                android:id="@+id/outputDataSize"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="0.2"
                android:autofillHints="@string/output_value"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/output_value"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/dataSizeSpinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>